--- a/data/xarm6/scenario_real_time/scenario_real_time.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time.yaml
@@ -5,8 +5,8 @@ environment:
       pos: [0, 0, -0.05]
 
 random_obstacles:
-  init_num: 10		                  # Number of random obstacles to start with the testing
-  max_num: 10		                # Maximal number of random obstacles to be added
+  init_num: 1		                  # Number of random obstacles to start with the testing
+  max_num: 100		                # Maximal number of random obstacles to be added
   max_vel: 1.6 			              # Maximal velocity of each obstacle in [m/s]
   max_acc: 0 			                # Maximal acceleration of each obstacle in [m/s²]
   dim: [0.01, 0.01, 0.01]         # Dimensions of each random obstacle in [m]
@@ -31,5 +31,5 @@ robot:
 testing:
   init_num: 1                     # Number of testing to start with
   init_num_success: 0             # Initial number of already achieved successful tests
-  max_num: 1                   # Maximal number of tests that should be carried out
-  reach_successful_tests: false	  # If true, run totally 'max_num_tests' successful tests 
+  max_num: 1000                   # Maximal number of tests that should be carried out
+  reach_successful_tests: false	  # If true, run totally 'max_num' successful tests 
