--- a/data/planar_2dof/scenario2/scenario2.yaml
+++ b/data/planar_2dof/scenario2/scenario2.yaml
@@ -37,3 +37,7 @@ robot:
   q_goal:  [2, 2.5]
   WS_center: [0.0, 0.0, 0.0]                          # Workspace center point in [m]
   WS_radius: 2                                        # Workspace radius in [m] assuming spherical workspace shape
+
+testing:
+  max_num: 10                                               # Maximal number of tests that should be carried out
+  
