--- a/data/xarm6/scenario_real_time/scenario_real_time.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time.yaml
@@ -6,8 +6,8 @@ environment:
       min_dist_tol: 0.05          # Minimal distance tolerance for a static obstacle to not be included into a dynamic scene
 
 random_obstacles:
-  init_num: 10		                  # Number of random obstacles to start with the testing
-  max_num: 10		                # Maximal number of random obstacles to be added
+  init_num: 1		                  # Number of random obstacles to start with the testing
+  max_num: 100		                # Maximal number of random obstacles to be added
   max_vel: 1.6 			              # Maximal velocity of each obstacle in [m/s]
   max_acc: 0 			                # Maximal acceleration of each obstacle in [m/s²]
   dim: [0.01, 0.01, 0.01]         # Dimensions of each random obstacle in [m]
@@ -18,16 +18,16 @@ robot:
   space: "RealVectorSpace"
   num_DOFs: 6
   q_start: [0, 0, 0, 3.1415, 1.5708, 0]
-  # q_goal: [0.5, 0, 0, 3.1415, 1.5708, 0]
   q_goal:  [3.1415, 0, -1.5708, 0, 0, 3.1415]
+  min_dist_start_goal: 5                                      # If greater than zero, 'q_start' and 'q_goal' will be generated randomly, where the workspace distance between them is minimally 'min_dist_start_goal'
   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.1]       # When the gripper is attached
   gripper_length: 0.17                                        # In [m]
   table_included: true                                        # Please check whether 'table' is added in 'environment'
   WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
   WS_radius: 1.5                                              # Workspace radius in [m] assuming spherical workspace shape
   max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
-  max_acc:  [6.3611, 6.3611, 6.3611, 6.3611, 6.3611, 6.3611]  # Maximal acceleration of each robot's joint in [rad/s²]
-  max_jerk: [159.15, 159.15, 159.15, 159.15, 159.15, 159.15]  # Maximal jerk of each robot's joint in [rad/s³]
+  max_acc:  [20, 20, 20, 20, 20, 20]                          # Maximal acceleration of each robot's joint in [rad/s²]
+  max_jerk: [500, 500, 500, 500, 500, 500]                    # Maximal jerk of each robot's joint in [rad/s³]
 
 testing:
   init_num: 1                     # Number of testing to start with
