--- a/data/xarm6/scenario_real_time/scenario_real_time2.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time2.yaml
@@ -51,7 +51,8 @@ robot:
   num_DOFs: 6
   q_start: [1.5708, 1.5708, -2.3562, 0, 0, 0]
   q_goal:  [-1.5708, 0, -2.3562, 0, 0, 0]
-  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 		# When gripper is not attached
+  min_dist_start_goal: 0                                      # If greater than zero, 'q_start' and 'q_goal' will be generated randomly, where the workspace distance between them is minimally 'min_dist_start_goal'
+  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380]    # When gripper is not attached
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
   gripper_length: 0      									  # In [m]
   table_included: false      								  # Please check whether 'table' is added in 'environment'
