--- a/data/xarm6/scenario2/scenario2.yaml
+++ b/data/xarm6/scenario2/scenario2.yaml
@@ -36,17 +36,18 @@ robot:
   type: "xarm6"
   urdf: "/data/xarm6/xarm6.urdf"
 #   space: "RealVectorSpace"
-  space: "RealVectorSpaceFCL"   		                        # Currently, it does not consider a gripper!
+  space: "RealVectorSpaceFCL"   		                          # Currently, it does not consider a gripper!
   num_DOFs: 6
   q_start: [1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
   q_goal:  [-1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 		# When gripper is not attached
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
   gripper_length: 0                                         	# In [m]
-  table_included: false      								    # Please check whether 'table' is added in 'environment'  
-  WS_center: [0.0, 0.0, 0.267]                                  # Workspace center point in [m]
-  WS_radius: 1.0                                                # Workspace radius in [m] assuming spherical workspace shape
+  table_included: false      								                  # Please check whether 'table' is added in 'environment'
+  self_collision_checking: true                               # Whether self-collision should be checked
+  WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
+  WS_radius: 1.0                                              # Workspace radius in [m] assuming spherical workspace shape
 
 testing:
-  max_num: 10                                               # Maximal number of tests that should be carried out
+  max_num: 10                                                 # Maximal number of tests that should be carried out
   
