--- a/data/xarm6/scenario3/scenario3.yaml
+++ b/data/xarm6/scenario3/scenario3.yaml
@@ -29,9 +29,10 @@ robot:
   q_start: [1.5708, 1.5708, -2.3562, 0, 0, 0]
   q_goal: [-1.5708, 0, -2.3562, 0, 0, 0]
   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 	# When gripper is not attached
-  # capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
+  # capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]  # When gripper is attached
   gripper_length: 0                                         # In [m]
-  table_included: true                                      # Please check whether 'table' is added in 'environment'  
+  table_included: true                                      # Please check whether 'table' is added in 'environment'
+  self_collision_checking: true                             # Whether self-collision should be checked
   WS_center: [0.0, 0.0, 0.267]                              # Workspace center point in [m]
   WS_radius: 1.0                                            # Workspace radius in [m] assuming spherical workspace shape
 
