--- a/data/xarm6/scenario_real_time/scenario_real_time1.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time1.yaml
@@ -56,6 +56,7 @@ robot:
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
   gripper_length: 0      # In [m]
   table_included: false                                       # Please check whether 'table' is added in 'environment'
+  self_collision_checking: true                               # Whether self-collision should be checked
   WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
   WS_radius: 1.5                                              # Workspace radius in [m] assuming spherical workspace shape
   max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
