--- a/data/configurations/configuration_spline5.yaml
+++ b/data/configurations/configuration_spline5.yaml
@@ -1,4 +1,6 @@
 MAX_TIME_COMPUTE: 0.003             # Maximal time in [s] for computing a spline
 MAX_TIME_PUBLISH: 0.001             # Maximal time in [s] for publishing a spline when using 'trajectory_msgs::msg::JointTrajectory' ROS2 topic 
+MAX_TIME_FINAL: 1.0                 # Maximal final time in [s] for a spline to be considered as valid 
 FINAL_JERK_STEP: 1.0                # Final jerk step when using bisection method for finding optimal value of coefficient 'c'
 FINAL_VELOCITY_STEP: 0.1            # Final velocity step when using bisection method for finding optimal value of final velocity
+IS_FINAL_VELOCITY_ZERO: true        # Whether a final velocity is zero when computing splines. If true, robot motion is more safe, yet a little bit slower. Note that when 'GUARANTEED_SAFE_MOTION' is true, this parameter is always true.
