--- a/data/planar_2dof/scenario_real_time/scenario_real_time.yaml
+++ b/data/planar_2dof/scenario_real_time/scenario_real_time.yaml
@@ -1,5 +1,5 @@
 random_obstacles:
-  init_num: 1		                  # Number of random obstacles to start with the testing
+  init_num: 0		                  # Number of random obstacles to start with the testing
   max_num: 100		                # Maximal number of random obstacles to be added
   max_vel: 1.6 			              # Maximal velocity of each obstacle in [m/s]
   max_acc: 0 			                # Maximal acceleration of each obstacle in [m/s²]
@@ -15,7 +15,7 @@ robot:
   min_dist_start_goal: 0                                      # If greater than zero, 'q_start' and 'q_goal' will be generated randomly, where the workspace distance between them is minimally 'min_dist_start_goal'
   capsules_radius: [0.05, 0.05]
   gripper_length: 0                                           # In [m]
-  table_included: false                                       # Please check whether 'table' is added in 'environment'
+  ground_included: 0                                          # Please check whether 'ground' is added in 'environment'
   self_collision_checking: false                              # Whether self-collision should be checked
   WS_center: [0.0, 0.0, 0.0]                                  # Workspace center point in [m]
   WS_radius: 2.5                                              # Workspace radius in [m] assuming spherical workspace shape
