--- a/data/xarm6/scenario2/scenario2.yaml
+++ b/data/xarm6/scenario2/scenario2.yaml
@@ -1,6 +1,6 @@
 environment:
   - box:
-      label: "table"
+      label: "ground"
       dim: [1.5, 1.5, 0.1]
       pos: [0, 0, -0.05]
   - box:
@@ -43,7 +43,7 @@ robot:
   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 		# When gripper is not attached
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
   gripper_length: 0                                         	# In [m]
-  table_included: false      								                  # Please check whether 'table' is added in 'environment'
+  ground_included: 0      								                    # Please check whether 'ground' is added in 'environment'
   self_collision_checking: true                               # Whether self-collision should be checked
   WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
   WS_radius: 1.0                                              # Workspace radius in [m] assuming spherical workspace shape
