--- a/data/xarm6/scenario_real_time/scenario_real_time1.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time1.yaml
@@ -1,6 +1,6 @@
 environment:
   - box:
-      label: "table"
+      label: "ground"
       dim: [1.5, 1.5, 0.1]
       pos: [0, 0, -0.05]
   - box:
@@ -55,13 +55,13 @@ robot:
   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 	  # When gripper is not attached
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
   gripper_length: 0      # In [m]
-  table_included: false                                       # Please check whether 'table' is added in 'environment'
+  ground_included: 0                                          # Please check whether 'ground' is added in 'environment'
   self_collision_checking: true                               # Whether self-collision should be checked
   WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
   WS_radius: 1.5                                              # Workspace radius in [m] assuming spherical workspace shape
   max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
-  max_acc:  [6.3611, 6.3611, 6.3611, 6.3611, 6.3611, 6.3611]  # Maximal acceleration of each robot's joint in [rad/s²]
-  max_jerk: [159.15, 159.15, 159.15, 159.15, 159.15, 159.15]  # Maximal jerk of each robot's joint in [rad/s³]
+  max_acc:  [20, 20, 20, 20, 20, 20]                          # Maximal acceleration of each robot's joint in [rad/s²]
+  max_jerk: [500, 500, 500, 500, 500, 500]                    # Maximal jerk of each robot's joint in [rad/s³]
 
 testing:
   init_num: 1                     # Number of testing to start with
