Pattern trees are created, as well as the file for generating useful dataset (e.g., for supervised learning) containing these pattern trees.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -59,6 +59,11 @@ target_compile_features(generate_random_scenarios PRIVATE cxx_std_17)
 target_link_libraries(generate_random_scenarios PUBLIC rpmpl_library ${PROJECT_LIBRARIES})
 target_include_directories(generate_random_scenarios PUBLIC ${PROJECT_SOURCE_DIR}/apps)
 
+add_executable(generate_dataset generate_dataset.cpp)
+target_compile_features(generate_dataset PRIVATE cxx_std_17)
+target_link_libraries(generate_dataset PUBLIC rpmpl_library ${PROJECT_LIBRARIES})
+target_include_directories(generate_dataset PUBLIC ${PROJECT_SOURCE_DIR}/apps)
+
 install(TARGETS
   test_nanoflann
   test_kdl_parser
@@ -73,4 +78,5 @@ install(TARGETS
   test_drgbt
   test_rgbmtstar
   generate_random_scenarios
+  generate_dataset
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin)
