--- a/data/planar_2dof/scenario2/scenario2.yaml
+++ b/data/planar_2dof/scenario2/scenario2.yaml
@@ -35,9 +35,12 @@ robot:
   num_DOFs: 2
   q_start: [-2, -2.5]
   q_goal:  [2, 2.5]
-  WS_center: [0.0, 0.0, 0.0]                          # Workspace center point in [m]
-  WS_radius: 2                                        # Workspace radius in [m] assuming spherical workspace shape
+  min_dist_start_goal: 2                                    # If greater than zero, 'q_start' and 'q_goal' will be generated randomly, where the workspace distance between them is minimally 'min_dist_start_goal'
+  WS_center: [0.0, 0.0, 0.0]                                # Workspace center point in [m]
+  WS_radius: 2                                              # Workspace radius in [m] assuming spherical workspace shape
 
 testing:
-  max_num: 10                                               # Maximal number of tests that should be carried out
+  max_num: 1                                                # Maximal number of tests that should be carried out
+  max_edge_length: 0.1
+  num_layers: 3
   
