--- a/data/xarm6/scenario2/scenario2.yaml
+++ b/data/xarm6/scenario2/scenario2.yaml
@@ -40,14 +40,15 @@ robot:
   num_DOFs: 6
   q_start: [1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
   q_goal:  [-1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
-  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 		# When gripper is not attached
-#   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
-  gripper_length: 0                                         	# In [m]
-  ground_included: 0      								                    # Please check whether 'ground' is added in 'environment'
+  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.05]      # When the gripper is attached
+  gripper_length: 0.17                                        # In [m]
+  ground_included: 2                                          # Please check whether 'ground' is added in 'environment'
   self_collision_checking: true                               # Whether self-collision should be checked
   WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
-  WS_radius: 1.0                                              # Workspace radius in [m] assuming spherical workspace shape
+  WS_radius: 1.5                                              # Workspace radius in [m] assuming spherical workspace shape
+  max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
+  max_acc:  [20, 20, 20, 20, 20, 20]                          # Maximal acceleration of each robot's joint in [rad/s²]
+  max_jerk: [500, 500, 500, 500, 500, 500]                    # Maximal jerk of each robot's joint in [rad/s³]
 
 testing:
-  max_num: 10                                                 # Maximal number of tests that should be carried out
-  
+  max_num: 1000                                               # Maximal number of tests that should be carried out
