--- a/data/xarm6/scenario2/scenario2.yaml
+++ b/data/xarm6/scenario2/scenario2.yaml
@@ -5,28 +5,28 @@ environment:
       pos: [0, 0, -0.05]
   - box:
       dim: [0.1, 0.4, 0.7]
-      pos: [-0.3, 0.5, 0.35]
+      pos: [-0.3, 0.8, 0.35]
   - box:
       dim: [0.1, 0.4, 0.7]
-      pos: [0.3, 0.5, 0.35]
+      pos: [0.3, 0.8, 0.35]
   - box:
       dim: [0.5, 0.4, 0.1]
-      pos: [0, 0.5, 0.65]
+      pos: [0, 0.8, 0.65]
   - box:
       dim: [0.5, 0.4, 0.1]
-      pos: [0, 0.5, 0.05]
+      pos: [0, 0.8, 0.05]
   - box:
       dim: [0.1, 0.4, 0.7]
-      pos: [-0.3, -0.5, 0.35]
+      pos: [-0.3, -0.8, 0.35]
   - box:
       dim: [0.1, 0.4, 0.7]
-      pos: [0.3, -0.5, 0.35]
+      pos: [0.3, -0.8, 0.35]
   - box:
       dim: [0.5, 0.4, 0.1]
-      pos: [0, -0.5, 0.65]
+      pos: [0, -0.8, 0.65]
   - box:
       dim: [0.5, 0.4, 0.1]
-      pos: [0, -0.5, 0.05]
+      pos: [0, -0.8, 0.05]
 
 random_obstacles:
   num: 0	                        # Number of random obstacles to be added
@@ -35,8 +35,7 @@ random_obstacles:
 robot:
   type: "xarm6"
   urdf: "/data/xarm6/xarm6.urdf"
-#   space: "RealVectorSpace"
-  space: "RealVectorSpaceFCL"   		                          # Currently, it does not consider a gripper!
+  space: "RealVectorSpace"
   num_DOFs: 6
   q_start: [1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
   q_goal:  [-1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
