--- a/data/xarm6/scenario2/scenario2.yaml
+++ b/data/xarm6/scenario2/scenario2.yaml
@@ -3,6 +3,7 @@ environment:
       label: "ground"
       dim: [1.5, 1.5, 0.1]
       pos: [0, 0, -0.05]
+      min_dist_tol: 0.05          # Minimal distance tolerance for a static obstacle to not be included into a dynamic scene
   - box:
       dim: [0.1, 0.4, 0.7]
       pos: [-0.3, 0.8, 0.35]
@@ -51,3 +52,4 @@ robot:
 
 testing:
   max_num: 1000                                               # Maximal number of tests that should be carried out
+  max_vel_obs: 0.3                                            # Maximal velocity for each obstacle from "environment"
