Lots of code fixes. Initial implementation of RRTx. Test app for RRTx (currently for planar2DOF).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ set(INCLUDE_DIRS
         ${PROJECT_SOURCE_DIR}/include/state_spaces/real_vector_space
         ${PROJECT_SOURCE_DIR}/include/planners
         ${PROJECT_SOURCE_DIR}/include/planners/rrt
+        ${PROJECT_SOURCE_DIR}/include/planners/rrtx
         ${PROJECT_SOURCE_DIR}/include/planners/rbt
         ${PROJECT_SOURCE_DIR}/include/planners/drbt
         ${PROJECT_SOURCE_DIR}/include/planners/rbt_star
