Splines are set to be default for trajectory interpolation. Some prints are commented.

--- a/data/configurations/configuration_rrtx.yaml
+++ b/data/configurations/configuration_rrtx.yaml
@@ -10,4 +10,4 @@ REPLANNING_THROTTLE: 1                # Process obstacles every N iterations
 REWIRE_FACTOR: 1.1                    # Factor for rewire radius
 START_BIAS: 0.05                      # Probability of sampling start directly
 RESOLUTION_COLL_CHECK: 0.01           # Perform collision check when obstacle moves at most 'RESOLUTION_COLL_CHECK' in [m]
-TRAJECTORY_INTERPOLATION: "None"      # Method for interpolation of trajectory: "None" or "Spline"
+TRAJECTORY_INTERPOLATION: "Spline"    # Method for interpolation of trajectory: "None" or "Spline"
