Test files modification...

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -74,10 +74,10 @@ target_compile_features(test_rrtx PRIVATE cxx_std_17)
 target_link_libraries(test_rrtx PUBLIC rpmpl_library ${PROJECT_LIBRARIES})
 target_include_directories(test_rrtx PUBLIC ${PROJECT_SOURCE_DIR}/apps)
 
-add_executable(test_rrtx_dynamic test_rrtx_dynamic.cpp)
-target_compile_features(test_rrtx_dynamic PRIVATE cxx_std_17)
-target_link_libraries(test_rrtx_dynamic PUBLIC rpmpl_library ${PROJECT_LIBRARIES})
-target_include_directories(test_rrtx_dynamic PUBLIC ${PROJECT_SOURCE_DIR}/apps)
+add_executable(test_rrtx_random_obstacles test_rrtx_random_obstacles.cpp)
+target_compile_features(test_rrtx_random_obstacles PRIVATE cxx_std_17)
+target_link_libraries(test_rrtx_random_obstacles PUBLIC rpmpl_library ${PROJECT_LIBRARIES})
+target_include_directories(test_rrtx_random_obstacles PUBLIC ${PROJECT_SOURCE_DIR}/apps)
 
 install(TARGETS
   test_nanoflann
@@ -96,5 +96,5 @@ install(TARGETS
   generate_random_scenarios
   generate_dataset
   test_rrtx
-  test_rrtx_dynamic
+  test_rrtx_random_obstacles
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin)
