--- a/data/planar_2dof/scenario1/scenario1.yaml
+++ b/data/planar_2dof/scenario1/scenario1.yaml
@@ -8,7 +8,7 @@ random_obstacles:
   dim: [0.01, 0.01, 0.01]         # Dimensions of each random obstacle in [m]
 
 robot:
-  type: "planar_2DOF"
+  type: "planar_2dof"
   urdf: "/data/planar_2dof/planar_2dof.urdf"
   space: "RealVectorSpaceFCL"
   num_DOFs: 2
