--- a/data/configurations/configuration_rt_rgbt.yaml
+++ b/data/configurations/configuration_rt_rgbt.yaml
@@ -3,4 +3,4 @@ MAX_ITER_TIME: 0.090 		                # Maximal runtime of a single iteration i
 MAX_PLANNING_TIME: 10	                  # Maximal algorithm runtime in [s]
 RESOLUTION_COLL_CHECK: 0.01             # Perform collision check when obstacle moves at most 'RESOLUTION_COLL_CHECK' in [m]
 GOAL_PROBABILITY: 0.9                   # Probability for choosing 'q_goal' as 'q_target'
-TRAJECTORY_INTERPOLATION: "Spline"      # Method for interpolation of trajectory: 'None', 'Spline' or 'Reflexxes'
+TRAJECTORY_INTERPOLATION: "Spline"      # Method for interpolation of trajectory: 'None', 'Spline' or 'Ruckig'
