--- a/data/configurations/configuration_drgbt.yaml
+++ b/data/configurations/configuration_drgbt.yaml
@@ -9,5 +9,5 @@ STATIC_PLANNER_TYPE: "RGBMT*"           # Name of a static planner (for obtainin
 REAL_TIME_SCHEDULING: "FPS"             # "FPS" - Fixed Priority Scheduling; "None" - Without real-time scheduling
 MAX_TIME_TASK1: 0.050                   # Maximal time in [s] which Task 1 can take from the processor
 RESOLUTION_COLL_CHECK: 0.01             # Perform collision check when obstacle moves at most 'RESOLUTION_COLL_CHECK' in [m]
-TRAJECTORY_INTERPOLATION: "Spline"      # Method for interpolation of trajectory: 'None' or 'Spline'
+TRAJECTORY_INTERPOLATION: "Spline"      # Method for interpolation of trajectory: "None", "Spline" or "Ruckig"
 GUARANTEED_SAFE_MOTION: false           # Whether robot motion is surely safe for environment
