--- a/data/planar_2dof/scenario1/scenario1.yaml
+++ b/data/planar_2dof/scenario1/scenario1.yaml
@@ -10,7 +10,7 @@ random_obstacles:
 robot:
   type: "planar_2dof"
   urdf: "/data/planar_2dof/planar_2dof.urdf"
-  space: "RealVectorSpaceFCL"
+  space: "RealVectorSpace"
   num_DOFs: 2
   q_start: [-2, -2.5]
   q_goal:  [2, 2.5]
