--- a/data/planar_2dof/scenario2/scenario2.yaml
+++ b/data/planar_2dof/scenario2/scenario2.yaml
@@ -31,16 +31,20 @@ random_obstacles:
 robot:
   type: "planar_2dof"
   urdf: "/data/planar_2dof/planar_2dof.urdf"
-  space: "RealVectorSpaceFCL"
+  space: "RealVectorSpace"
   num_DOFs: 2
   q_start: [-2, -2.5]
   q_goal:  [2, 2.5]
-  min_dist_start_goal: 2                                    # If greater than zero, 'q_start' and 'q_goal' will be generated randomly, where the workspace distance between them is minimally 'min_dist_start_goal'
+  min_dist_start_goal: 0                                    # If greater than zero, 'q_start' and 'q_goal' will be generated randomly, where the workspace distance between them is minimally 'min_dist_start_goal'
   WS_center: [0.0, 0.0, 0.0]                                # Workspace center point in [m]
   WS_radius: 2                                              # Workspace radius in [m] assuming spherical workspace shape
+  max_vel:  [3.1415, 3.1415]                                  # Maximal velocity of each robot's joint in [rad/s]
+  max_acc:  [20, 20]                                          # Maximal acceleration of each robot's joint in [rad/s²]
+  max_jerk: [500, 500]                                        # Maximal jerk of each robot's joint in [rad/s³]
 
 testing:
   max_num: 1                                                # Maximal number of tests that should be carried out
   max_edge_length: 0.1
   num_layers: 3
-  
+  max_vel_obs: 0.3          # Maximal velocity for each obstacle from "environment"
+  motion_type: "circular"   # Options: "straight", "circular", "two_tunnels", "random_directions", "light_directions". See 'Environment.cpp' for more details.
