--- a/data/planar_2dof/scenario3/scenario3.yaml
+++ b/data/planar_2dof/scenario3/scenario3.yaml
@@ -19,7 +19,7 @@ random_obstacles:
 robot:
   type: "planar_2dof"
   urdf: "/data/planar_2dof/planar_2dof.urdf"
-  space: "RealVectorSpaceFCL"
+  space: "RealVectorSpace"
   num_DOFs: 2
   q_start: [1.8, 1.25]
   q_goal:  [1.3416, -1.25]
