--- a/data/configurations/configuration_realvectorspace.yaml
+++ b/data/configurations/configuration_realvectorspace.yaml
@@ -1,2 +1,3 @@
 EQUALITY_THRESHOLD: 1e-4		            # Threshold to determine whether two states are equal
 NUM_INTERPOLATION_VALIDITY_CHECKS: 10	  # Number of discrete collision checks of the edge with the length of RRTConnectConfig::EPS_STEP
+MAX_DISTANCE: 1000                      # Maximal distance to obstacles in [m], i.e., the used distance in case without obstacles
